--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [HTTP]
 scheme = http
-baseurl = httpbin.org
-port = 
+baseurl = api.apiopen.top
+port =
 timeout = 5
 
 [DATABASE]
@@ -22,6 +22,7 @@ case_code = 6
 case_result = 7
 case_sheet_index = 0
 excel_file = TestCase/testcase.xls
+excel_case_name = ['测试编号','测试用例','FrontSQL前置数据命令','请求体','接口路径','请求方法','HttpCode','结果校验']
 
 [REPORT]
 path = D:\python\djangolianxi\自动化测试框架\homework\interface0624\report
