--- a/config/config.ini
+++ b/config/config.ini
@@ -1,30 +1,13 @@
 [HTTP]
 scheme = http
 baseurl = api.apiopen.top
-port =
+port = 
 timeout = 5
 
-[DATABASE]
-host = localhost
-username = root
-password = root
-port = 3306
-database = chitchat
-
 [EXCEL]
-case_no = 0
-case_name = 1
-case_front_sql = 2
-case_data = 3
-case_uri = 4
-case_method = 5
-case_code = 6
-case_result = 7
-case_sheet_index = 0
 excel_file = TestCase/testcase.xls
 excel_case_name = ['测试编号','测试用例','FrontSQL前置数据命令','请求体','接口路径','请求方法','HttpCode','结果校验']
 
 [REPORT]
-path = D:\python\djangolianxi\自动化测试框架\homework\interface0624\report
-
+path = D:\python\djangolianxi\自动化测试框架\homework\interface0624\report\20190713
 
